@@ -5,6 +5,12 @@ Please make entries to this log (in addition to the CVS log) that describe
 major changes to the OpenSLP code base.  An entries should be separated by
 blank lines and include the date, developer's email, and change description.
 =============================================================================
+04/04/02 matt@caldera.com
+Fixed possible SEGV when logging DA traffic
+
+04/04/02 matt@caldera.com
+Added patch from Arun Barboza that makes attribute compares case insensitive
+as per RFC 2608
 
 03/05/02
 Added patch from Garth Bushell that fixes an SLP url parsing problem.
